# JD-news-brief

./: .gitignore  feeds.yml  pyproject.toml
.github/workflows/: morning.yml
src/: main.py
src/format/: html.py
src/ingest/: html_list.py  rss.py
src/senders/: discord.py  whatsapp_cloud.py
src/summarize/: sonar.py
src/util/: cache.py
