[project]
name = "jd-news-brief"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.40.0",
  "feedparser>=6.0.11",
  "requests>=2.32.0",
  "jinja2>=3.1.4",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "boto3>=1.34.0",
]


[project.scripts]
JD-news-brief = "src.main:main"


[tool.uv]
package = true